--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ chardet
 altgraph==0.13
 args==0.1.0
 bdist-mpkg==0.5.0
-bonjour-py==0.3
+#bonjour-py==0.3
 clint==0.5.1
 Django==1.10.6
 docopt==0.6.2
