--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ bdist-mpkg==0.5.0
 clint==0.5.1
 Django==1.10.6
 docopt==0.6.2
-macholib==1.8
+macholib
 matplotlib==1.3.1
 modulegraph==0.13
 numpy==1.8.0rc1
