--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,9 @@ docopt==0.6.2
 macholib
 matplotlib==1.3.1
 modulegraph==0.13
-numpy==1.8.0rc1
-pipreqs==0.4.7
-pkginfo==1.4.1
-py2app==0.11
-PyInstaller==3.2.1
+numpy
+pipreqs
+pkginfo
 pyobjc-core==2.5.1
 pyobjc-framework-Accounts==2.5.1
 pyobjc-framework-AddressBook==2.5.1
