--- a/requirements.txt
+++ b/requirements.txt
@@ -11,21 +11,14 @@ clint==0.5.1
 Django==1.10.6
 docopt==0.6.2
 macholib
-matplotlib==1.3.1
+#matplotlib==1.3.1
 modulegraph==0.13
 numpy
 pipreqs
 pkginfo
 pyOpenSSL==0.13.1
-pyparsing==2.0.1
 python-dateutil==1.5
 pytz==2013.7
 requests==2.13.0
 requests-toolbelt==0.7.1
 scipy==0.13.0b1
-six==1.4.1
-twine==1.8.1
-vboxapi==1.0
-xattr==0.6.4
-yarg==0.1.9
-zope.interface==4.1.1
